--- a/Weather/Weather/WTCityDetailInfoView.xib
+++ b/Weather/Weather/WTCityDetailInfoView.xib
@@ -355,7 +355,6 @@
 						<string key="NSFrame">{{26, 447}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -402,6 +401,14 @@
 						<reference key="destination" ref="191373211"/>
 					</object>
 					<int key="connectionID">193</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">detailTimeScrollView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="858610157"/>
+					</object>
+					<int key="connectionID">204</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1408,6 +1415,7 @@
 						<int key="objectID">100</int>
 						<reference key="object" ref="858610157"/>
 						<reference key="parent" ref="191373211"/>
+						<string key="objectName">detailTimeScrollView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">113</int>
@@ -1808,7 +1816,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">203</int>
+			<int key="maxID">204</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1823,17 +1831,20 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">WTCityDetailInfoViewController</string>
 					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">cityNameOfWTCityDetailInfo</string>
-						<string key="NS.object.0">UILabel</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">cityNameOfWTCityDetailInfo</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0" id="312323811">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="cityNameOfWTCityDetailInfo">UILabel</string>
+						<string key="detailTimeScrollView">UIScrollView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="cityNameOfWTCityDetailInfo" id="337656752">
 							<string key="name">cityNameOfWTCityDetailInfo</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
-					</object>
+						<object class="IBToOneOutletInfo" key="detailTimeScrollView" id="152202156">
+							<string key="name">detailTimeScrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/WTCityDetailInfoViewController.h</string>
@@ -1842,14 +1853,14 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">WTCityDetailInfoViewController</string>
 					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">cityNameOfWTCityDetailInfo</string>
-						<string key="NS.object.0">UILabel</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">cityNameOfWTCityDetailInfo</string>
-						<reference key="NS.object.0" ref="312323811"/>
-					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="cityNameOfWTCityDetailInfo">UILabel</string>
+						<string key="detailTimeScrollView">UIScrollView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<reference key="cityNameOfWTCityDetailInfo" ref="337656752"/>
+						<reference key="detailTimeScrollView" ref="152202156"/>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Weather/WTCityDetailInfoViewController.h</string>
