--- a/Weather/Weather/WTCityInfoCellView.xib
+++ b/Weather/Weather/WTCityInfoCellView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">14A238x</string>
+		<int key="IBDocument.SystemTarget">2048</int>
+		<string key="IBDocument.SystemVersion">14A261i</string>
 		<string key="IBDocument.InterfaceBuilderVersion">6154.17</string>
-		<string key="IBDocument.AppKitVersion">1318.14</string>
-		<string key="IBDocument.HIToolboxVersion">735.00</string>
+		<string key="IBDocument.AppKitVersion">1321.11</string>
+		<string key="IBDocument.HIToolboxVersion">737.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">6153.11</string>
@@ -36,7 +36,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUITableViewCell" id="509457081">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">36</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="105164308">
@@ -48,11 +48,10 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 95}</string>
 								<reference key="NSSuperview" ref="105164308"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="116488803"/>
 								<string key="NSHuggingPriority">{251, 251}</string>
 								<string key="NSAntiCompressionPriority">{750, 750}</string>
-								<object class="NSAppearance" key="NSAppearance">
+								<object class="NSCompositeAppearance" key="NSAppearance">
 									<string key="NSAppearanceName">NSAppearanceNameAqua</string>
 								</object>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -73,7 +72,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 26}, {29, 21}}</string>
 										<reference key="NSSuperview" ref="116488803"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="223067616"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -105,7 +103,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{57, 26}, {67, 19}}</string>
 										<reference key="NSSuperview" ref="116488803"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="781806323"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -132,7 +129,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{20, 49}, {180, 41}}</string>
 										<reference key="NSSuperview" ref="116488803"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="352713354"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -160,8 +156,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{208, 30}, {92, 60}}</string>
 										<reference key="NSSuperview" ref="116488803"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -188,7 +182,6 @@
 								</array>
 								<string key="NSFrameSize">{320, 95}</string>
 								<reference key="NSSuperview" ref="105164308"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="954473594"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="701698838">
 									<int key="NSColorSpace">3</int>
@@ -200,7 +193,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 94}</string>
 						<reference key="NSSuperview" ref="509457081"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="522284831"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="701698838"/>
@@ -212,8 +204,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 95}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="105164308"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="701698838"/>
@@ -936,7 +926,7 @@
 				<string key="122.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="123.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="125.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="125.IBViewMetadataConstraints"/>
+				<reference key="125.IBViewMetadataConstraints" ref="0"/>
 				<boolean value="NO" key="125.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="134.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1000,169 +990,10 @@
 			<nil key="sourceID"/>
 			<int key="maxID">140</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">WTCityMainViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="cfBtnClicked:">id</string>
-						<string key="openSearchView:">id</string>
-						<string key="pinchHandler:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cfBtnClicked:" id="320695422">
-							<string key="name">cfBtnClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="openSearchView:" id="156564515">
-							<string key="name">openSearchView:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="pinchHandler:" id="762300578">
-							<string key="name">pinchHandler:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="_cityName">UILabel</string>
-						<string key="_dataView">UIView</string>
-						<string key="_imageViewOfCell">UIImageView</string>
-						<string key="backgroundCityDetailView">UIView</string>
-						<string key="bgView">UIImageView</string>
-						<string key="cityDetailInfoScrl">UIScrollView</string>
-						<string key="cityDetailInfoScrlPageCtl">UIPageControl</string>
-						<string key="cityMainTableView">UITableView</string>
-						<string key="cityMainView">UIView</string>
-						<string key="footView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="_cityName" id="968804984">
-							<string key="name">_cityName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_dataView" id="1067011892">
-							<string key="name">_dataView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="_imageViewOfCell" id="730756266">
-							<string key="name">_imageViewOfCell</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="backgroundCityDetailView" id="558477217">
-							<string key="name">backgroundCityDetailView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgView" id="567937809">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityDetailInfoScrl" id="528460546">
-							<string key="name">cityDetailInfoScrl</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityDetailInfoScrlPageCtl" id="343883589">
-							<string key="name">cityDetailInfoScrlPageCtl</string>
-							<string key="candidateClassName">UIPageControl</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityMainTableView" id="184870078">
-							<string key="name">cityMainTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityMainView" id="75762777">
-							<string key="name">cityMainView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="footView" id="535227633">
-							<string key="name">footView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/WTCityMainViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">WTCityMainViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundCityDetailView">UIView</string>
-						<string key="bgView">UIImageView</string>
-						<string key="cityDetailInfoScrl">UIScrollView</string>
-						<string key="cityDetailInfoScrlPageCtl">UIPageControl</string>
-						<string key="cityMainTableView">UITableView</string>
-						<string key="cityMainView">UIView</string>
-						<string key="footView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<reference key="backgroundCityDetailView" ref="558477217"/>
-						<reference key="bgView" ref="567937809"/>
-						<reference key="cityDetailInfoScrl" ref="528460546"/>
-						<reference key="cityDetailInfoScrlPageCtl" ref="343883589"/>
-						<reference key="cityMainTableView" ref="184870078"/>
-						<reference key="cityMainView" ref="75762777"/>
-						<reference key="footView" ref="535227633"/>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Weather/WTCityMainViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">WTCityMainViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="cfBtnClicked:">id</string>
-						<string key="openSearchView:">id</string>
-						<string key="pinchHandler:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<reference key="cfBtnClicked:" ref="320695422"/>
-						<reference key="openSearchView:" ref="156564515"/>
-						<reference key="pinchHandler:" ref="762300578"/>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="_cityName">UILabel</string>
-						<string key="_dataView">UIView</string>
-						<string key="_imageViewOfCell">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<reference key="_cityName" ref="968804984"/>
-						<reference key="_dataView" ref="1067011892"/>
-						<reference key="_imageViewOfCell" ref="730756266"/>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Weather/WTCityMainViewController.m</string>
-					</object>
-				</object>
-			</array>
-			<array class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">UIKit.framework/Headers/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.previouslyAttemptedUpgradeToXcode5">NO</bool>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1552" key="NS.object.0"/>
-		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
 			<integer value="4600" key="NS.object.0"/>
